# ChangeLog for media-libs/liblrdf
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/ChangeLog,v 1.21 2005/04/26 20:13:11 fvdpol Exp $

  26 Apr 2005; Frank van de Pol <fvdpol@gentoo.org> liblrdf-0.3.7.ebuild:
  Corrected runtime dependencies. fixes bug #90517

*liblrdf-0.4.0 (15 Apr 2005)

  15 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> -liblrdf-0.3.1.ebuild,
  -liblrdf-0.3.4.ebuild, -liblrdf-0.3.5-r1.ebuild, liblrdf-0.3.7.ebuild,
  +liblrdf-0.4.0.ebuild:
  pkgconfig not in RDEPEND any longer, also did some cleanup. new upstream
  version released, fixes #89018

  05 Mar 2005; Markus Rothe <corsair@gentoo.org> liblrdf-0.3.7.ebuild:
  Stable on ppc64

  03 Jan 2005; Markus Rothe <corsair@gentoo.org> liblrdf-0.3.7.ebuild:
  Added ~ppc64 to KEYWORDS

  01 Oct 2004; kito@gentoo.org liblrdf-0.3.7.ebuild:
  added ~ppc-macos

  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.7.ebuild:
  Stable sparc and amd64.

  06 May 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.7.ebuild:
  Stable x86.

  16 Apr 2004; Travis Tilley <lv@gentoo.org> liblrdf-0.3.7.ebuild:
  added ~amd64 keyword

*liblrdf-0.3.7 (05 Apr 2004)

  05 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.7.ebuild:
  Version bump

*liblrdf-0.3.5-r1 (05 Apr 2004)

  05 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.1.ebuild,
  liblrdf-0.3.4.ebuild, liblrdf-0.3.5-r1.ebuild, liblrdf-0.3.5.ebuild:
  fixed bug #45980.

  02 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.1.ebuild,
  liblrdf-0.3.4.ebuild, liblrdf-0.3.5.ebuild:
  Added pkgconfig dep... might fix bug #45980.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> liblrdf-0.3.1.ebuild,
  liblrdf-0.3.4.ebuild, liblrdf-0.3.5.ebuild:
  Removed cruft.

  28 Feb 2004; David Holm <dholm@gentoo.org> liblrdf-0.3.5.ebuild:
  Added to ~ppc.

*liblrdf-0.3.5 (09 Feb 2004)
