@@ -1,13 +1,13 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/liblrdf-0.3.7.ebuild,v 1.10 2005/04/26 20:13:11 fvdpol Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/liblrdf-0.3.7.ebuild,v 1.11 2006/05/15 07:09:25 wormo Exp $
 
 DESCRIPTION="A library for the manipulation of RDF file in LADSPA plugins"
 HOMEPAGE="http://plugin.org.uk"
 SRC_URI="http://plugin.org.uk/releases/lrdf/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 sparc ~ppc amd64 ~ppc-macos ppc64"
+KEYWORDS="x86 sparc ppc amd64 ~ppc-macos ppc64"
 IUSE=""
 RDEPEND=">=media-libs/raptor-0.9.12
 	>=media-libs/ladspa-sdk-1.12"
