@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/liblrdf
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/ChangeLog,v 1.21 2005/04/26 20:13:11 fvdpol Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/liblrdf/ChangeLog,v 1.22 2006/05/15 07:09:25 wormo Exp $
+
+  09 May 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  liblrdf-0.3.7.ebuild:
+  stable on ppc (needed for Bug #132522)
 
   26 Apr 2005; Frank van de Pol <fvdpol@gentoo.org> liblrdf-0.3.7.ebuild:
   Corrected runtime dependencies. fixes bug #90517
